java_lang_Thread::async_get_stack_trace does not properly protect JavaThread

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 26
    • Affects Version/s: 19
    • Component/s: hotspot
    • b22
    • 19
    • b11
    • generic
    • generic

      src/hotspot/share/runtime/threadSMR.hpp has an example of the correct usage of ThreadsListHandle to protect JavaThread:
      // ThreadsListHandle tlh;
      // JavaThread* jt = nullptr;
      // bool is_alive = tlh.cv_internal_thread_to_JavaThread(jthread, &jt, nullptr);
      // if (is_alive) {
      // : // do stuff with 'jt'...
      // }

      java_lang_Thread::async_get_stack_trace() does not follow the pattern, but does:
      JNIHandles::resolve(jthread) (in JVM_GetStackTrace)
      ThreadsListHandle tlh(JavaThread::current());
      JavaThread* thread = java_lang_Thread::thread(java_thread);

            Assignee:
            Alex Menkov
            Reporter:
            Alex Menkov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: