8361103: java_lang_Thread::async_get_stack_trace does not properly protect JavaThread

Reviewed-by: sspitsyn, dholmes